tests/ui/unsafe/unsafe_op_in_unsafe_fn/in_2024_compatibility.stderr
error[E0133]: call to unsafe function `unsf` is unsafe and requires unsafe block
  --> $DIR/in_2024_compatibility.rs:7:5
   |
LL |     unsf();
   |     ^^^^^^ call to unsafe function
   |
   = note: for more information, see <https://doc.rust-lang.org/edition-guide/rust-2024/unsafe-op-in-unsafe-fn.html>
   = note: consult the function's documentation for information on how to avoid undefined behavior
note: an unsafe function restricts its caller, but its body is safe by default
  --> $DIR/in_2024_compatibility.rs:6:1
   |
LL | unsafe fn foo() {
   | ^^^^^^^^^^^^^^^
note: the lint level is defined here
  --> $DIR/in_2024_compatibility.rs:1:9
   |
LL | #![deny(rust_2024_compatibility)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^
   = note: `#[deny(unsafe_op_in_unsafe_fn)]` implied by `#[deny(rust_2024_compatibility)]`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0133`.
